--- a/PropertyList/Views/Property/Index.cshtml
+++ b/PropertyList/Views/Property/Index.cshtml
@@ -1,8 +1,14 @@
 ﻿@model IEnumerable<PropertyList.Models.PropertyViewModel>
 @{
     ViewBag.Title = "Home";
+    bool isLogin = Session["Username"] == null ? false : true; //todo
 }
 <h2>Property List</h2>
+
+@if (isLogin)
+{
+    @Html.ActionLink("Create new property", "Create", "Property", null, new { @class = "btn btn-info" })
+}
 
 <div class="form-horizontal">
     <br />
@@ -21,7 +27,14 @@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Bathroom)
-                </th>            
+                </th>
+                @if (isLogin)
+                {
+                    <th>
+                        Status
+                    </th>
+                }
+
             </tr>
 
             @foreach (var item in Model)
@@ -39,6 +52,21 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Bathroom)
                     </td>
+
+                    @if (isLogin)
+                    {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Status)
+                        </td>
+
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.PropertyID }, new { @class = "btn btn-success" })      
+                        </td>
+                        
+                        <td> 
+                            @Html.ActionLink("Delete", "Edit", new { id = item.PropertyID }, new { @class = "btn btn-danger" })
+                        </td>
+                    }
                 </tr>
             }
 
