--- a/PropertyList/Views/Property/EditSalesAdmin.cshtml
+++ b/PropertyList/Views/Property/EditSalesAdmin.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Edit Property";
 }
-<h2>Edit Property</h2>
+<h2>Edit Property *</h2>
 
 @using (Html.BeginForm())
 {
@@ -34,6 +34,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Bathroom, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Bathroom, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ConfidentialNotes, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ConfidentialNotes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ConfidentialNotes, "", new { @class = "text-danger" })
             </div>
         </div>
 
