--- a/PropertyList/Views/Property/PropertyListReadOnly.cshtml
+++ b/PropertyList/Views/Property/PropertyListReadOnly.cshtml
@@ -1,15 +1,8 @@
 ﻿@model IEnumerable<PropertyList.Models.PropertyViewModel>
 @{
-    ViewBag.Title = "Home";
-    bool isLogin = Session["Username"] == null ? false : true; //todo
+    ViewBag.Title = "Property";
 }
-<h2>Property List</h2>
-@*<p>@(Request.IsAuthenticated ? "Login Success" : "Fail, try again")</p>*@
-
-@if (isLogin)
-{
-    @Html.ActionLink("Create new property", "Create", "Property", null, new { @class = "btn btn-info" })
-}
+<h2>Property List (read only</h2>
 
 <div class="form-horizontal">
     <br />
@@ -18,7 +11,7 @@
         <table class="table table-responsive" style="width:600px">
             <tr>
                 <th>
-                    Property ID
+                    @Html.DisplayNameFor(model => model.PropertyID)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Location)
@@ -29,13 +22,6 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Bathroom)
                 </th>
-                @if (isLogin)
-                {
-                    <th>
-                        Status
-                    </th>
-                }
-
             </tr>
 
             @foreach (var item in Model)
@@ -53,21 +39,6 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Bathroom)
                     </td>
-
-                    @if (isLogin)
-                    {
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Status)
-                        </td>
-
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.PropertyID }, new { @class = "btn btn-success" })      
-                        </td>
-                        
-                        <td> 
-                            @Html.ActionLink("Delete", "Edit", new { id = item.PropertyID }, new { @class = "btn btn-danger" })
-                        </td>
-                    }
                 </tr>
             }
 
