--- a/PropertyList/Views/Property/PropertyListForSales.cshtml
+++ b/PropertyList/Views/Property/PropertyListForSales.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Property";
 }
-<h2>Property List (sales</h2>
+<h2>Manage Property</h2>
 
 @Html.ActionLink("Create new property", "Create", "Property", null, new { @class = "btn btn-info" })
 
