--- a/PropertyList/Views/Property/PropertyListReadOnly.cshtml
+++ b/PropertyList/Views/Property/PropertyListReadOnly.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Property";
 }
-<h2>Property List (read only</h2>
+<h2>Property List</h2>
 
 <div class="form-horizontal">
     <br />
