--- a/PropertyList/Views/Partials/_Login.cshtml
+++ b/PropertyList/Views/Partials/_Login.cshtml
@@ -1,13 +1,14 @@
 ﻿@{
-    bool isLogin = Session["Username"] == null ? false : true;
+    bool isLogin = Request.Cookies["Username"] == null ? false : true;
 }
 
 @if (isLogin)
 {
-    <li><a>Welcome, <strong>@Session["Username"].ToString()</strong></a> </li>
+    <li>@Html.ActionLink("Create Staff", "CreateStaff", "Account")</li>
+    <li><a style="color: white">Welcome, <strong>@Request.Cookies["Username"].Value</strong></a> </li>
     <li>@Html.ActionLink("Log out", "Logout", "Account")</li>
 }
 else
 {
-    <li>@Html.ActionLink("Log in", "Login", "Account")</li>
+    <li>@Html.ActionLink("Log in", "Login", "Account", null, new { @class = "btn btn-primary" })</li>
 }
