--- a/PropertyList/Views/Property/PropertyListForSalesAdmin.cshtml
+++ b/PropertyList/Views/Property/PropertyListForSalesAdmin.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Property";
 }
-<h2>Property List (SA</h2>
+<h2>Manage Property </h2>
 
 <div class="form-horizontal">
     <br />
