--- a/PropertyList/Views/Error/UnAuthorized.cshtml
+++ b/PropertyList/Views/Error/UnAuthorized.cshtml
@@ -1,3 +1,10 @@
-﻿
+﻿@{
+    ViewBag.Title = "Access Denied";
+}
 
-<h1>403</h1>
+<div class="jumbotron alert alert-warning">
+    <h2>Access Denied</h2>
+    <p class="lead">The account doesn't have permission to access this conetnt.</p>
+    <br />
+    <p><a href="@Url.Action("Index", "Home")" class="btn btn-primary">Back to homepage &raquo;</a></p>
+</div>
